# zephyr-nanochess

./: CMakeLists.txt  LICENSE  README.md  prj.conf  sample.yaml
src/: chess-interface.cpp  chess-interface.h  main.c  main.cpp  nano-chess.cpp  nano-chess.h
